Preparando e implementado el servicio Search

--- a/ECommerce.Api.Search/appsettings.json
+++ b/ECommerce.Api.Search/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Services": {
+    "Customers": "http://localhost:52067",
+    "Orders": "http://localhost:52071",
+    "Products": "http://localhost:52041"
+  }
 }
