--- a/ECommerce.Api.Customers/Properties/launchSettings.json
+++ b/ECommerce.Api.Customers/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52067",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:52067"
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
