--- a/ECommerce.Api.Products/Properties/launchSettings.json
+++ b/ECommerce.Api.Products/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52041",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:52041"
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
